# bowling-tracker-app

./: .gitignore  Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: handler.rs  main.rs  model.rs  schema.rs
common/: Cargo.toml
common/src/: lib.rs
frontend-app/: nativescript.config.ts  package-lock.json  package.json
frontend-app/src/: app.css  app.ts
frontend-app/src/components/: DateViewScreen.tsx  HomeScreen.tsx  NavigationParamList.ts  Navigator.tsx
frontend-app/src/models/: game.model.ts  index.ts  response.model.ts
frontend-app/src/services/: game.service.ts  index.ts
frontend-app/src/utils/: dateUtils.ts
