[package]
name = "backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }
dotenvy = "0.15.7"
env_logger = "0.11.3"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.7.4", features = ["runtime-async-std", "tls-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
